# assembly_env_description

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: assembly_env_2arm.launch  assembly_env_3arm.launch  assembly_env_4arm.launch  assembly_env_5arm.launch
meshes/: gripper2_base.stl  gripper2_tip.stl  gripper_base.stl  gripper_moving_tip.stl  gripper_tip_left.stl  gripper_tip_right.stl
robots/: assembly_env.urdf  assembly_env.urdf.xacro  assembly_env_2arm.xacro  assembly_env_3arm.xacro  assembly_env_4arm.xacro  assembly_env_5arm.xacro  assembly_env_dual.urdf.xacro  assembly_env_triple.urdf.xacro  dyros_assembly_gripper.urdf.xacro  dyros_assembly_gripper.xacro  dyros_assembly_gripper2.xacro  dyros_assembly_gripper_left.urdf  dyros_assembly_gripper_right.urdf  husky_pandas.xacro
scripts/: gen_dh_urdf.py  urdf_ready.py
vrep/: assembly_env.ttt  assembly_env_with_camera.ttt
